# ml-rescue-predict

./: .gitignore  README.md  secrets.sh.example
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: elt_dag.py  extract_and_load_dag.py  ml-training.py  ml_training_dag.py  transform_data_dag.py  weather_dag.py
airflow/data/: meteo_celsius_Quiers_2022_2023.csv
airflow/plugins/: s3_to_postgres.py  s3_to_snowflake.py
airflow/scripts/: load_connections.py
airflow/tests/: test_etl_dag.py
airflow/variables/: connections.example.json  variables.json
api/: .env.test  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  router.py  run.sh
api/src/: main.py
api/src/handlers/: rescue_predict_handler.py
api/src/models/: rescue_predict_model.py
api/src/routers/: rescue_predict_router.py
app/: api_feries.py  casernes_pompier.csv  jours_feries_metropole.csv  scraping_casernes.py  scrapping_vacances-2005-2025.py  vacances_scolaires_2005_2025.csv  vacances_scolaires_2005_2026.csv
docker/: pyproject.toml
jenkins-server/: README.md  docker-compose.yaml
mlflow/: .env.test  Dockerfile  README.md  docker-compose.yaml
notebooks/: alex_researchs.ipynb  maurice.ipynb  maurice_researchs.ipynb  model3.ipynb
streamlit/: Dockerfile  app.py
training/: .env.example  Dockerfile  README.md  requirements.txt  run.sh.example
training/app/: training.py
