[tool.poetry]
name = "mlflow-env"
version = "0.1.0"
description = "mlflow environment"
authors = ["alexandre <2a.alexandre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
mlflow = "^2.20.1"
polars = "^1.21.0"
numpy = "^2.2.2"
boto3 = "^1.36.15"
scikit-learn = "^1.6.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
